# postgres_prac

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  schema.sql
src/postgres_prac/: __main__.py  notebook.py
